[package]
name = "rtorrent_xml_rpc"
version = "0.1.2"
authors = ["Jonathan Donaldson"]
repository = "https://github.com/jdon/rtorrent_xml_rpc_rust"
description = "A crate to send XML RPC to rtorrent"
keywords = ["rtorrent", "xml", "rpc", "xmlrpc"]
license = "GPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]